# agents

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md
.azure-pipelines/: copilot-deploy.yml
.claude/: settings.json
.claude/commands/: deploy.md  review.md  test-all.md
.github/workflows/: agent-ssot-check.yml  ci.yml  copilot-deploy.yml  ssot-platform-check.yml
agents/: SocialMediaManager.SKILL.md  code-generator.yml  compliance-validator.yml  deployment-orchestrator.yml  memory-agent.yml  validation-agent.yml
agents/capabilities/: azure_ai_target.yaml  certifications_alignment.yaml
agents/personas/: social_media_manager.md
agents/registry/: skills-index.json
agents/system/: agentic-sdlc-constitution.md
contracts/tools/: TOOL_SPEC_TEMPLATE.md
docs/architecture/: AGENT_TAXONOMY.md  telegram-expense-automation.md
docs/engineering/: AI_EDITOR_POLICY.md
docs/foundry-kb/: agent-instructions-v7-draft.md  atc-codes-reference.md  bir-filing-calendar.md  compliance-module-states.md  (+3 more)
eval/: action_eval.yaml  knowledge_copilot_eval.yaml
infra/: .env.example
knowledge/: INDEX.md
mcp/: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  package.json  tsconfig.json
ops-platform/adapters/foundry/: README.md  __init__.py  action_gateway.py  client.py  pyproject.toml  request_contract.json
ops-platform/adapters/foundry/src/foundry_adapter/: audit.py  client.py  policy.py  schemas.py  service.py
scripts/: check_tool_spec_contract.py
tests/: test_agent_capability_matrix.py  test_agent_ingress_matrix.py  test_spec_ssot_consistency.py
(+206 files in other folders)
